syntax = "proto3";

option java_package = "net.ramify.model.place.proto";
option java_outer_classname = "PlaceProto";

import "location.proto";

message Place {

    string id = 1;
    string name = 2;
    PlaceType type = 3;
    Place parent = 4;

}

enum PlaceType {

    COUNTRY = 0;

    STATE = 10;
    COUNTY = 11;

    RAPE = 20;

    HUNDRED = 30;
    WAPENTAKE = 31;

    PARISH = 40;
    BOROUGH = 41;
    CITY = 42;

    TOWNSHIP = 50;
    DISTRICT = 51;

    TOWN = 60;
    VILLAGE = 61;

    //
    MANOR = 70;

    //Specific places
    HOUSE = 100;
    FARMSTEAD = 101;
    CHURCH = 102;
    HOSPITAL = 103;
    SCHOOL = 104;

}

message PlaceList {

    repeated Place place = 1;

}

message PlaceIdList {

    repeated string id = 1;

}