syntax = "proto3";

option java_package = "net.ramify.model.record.proto";
option java_outer_classname = "RecordProto";

import "date.proto";
import "family.proto";
import "link.proto";

message Record {

    string id = 1;
    DateRange date = 2;
    repeated Family family = 3;
    RecordType type = 4;

}

message RecordList {

    repeated Record record = 1;

}

message RecordSet {

    string id = 1;
    string longTitle = 2;
    string shortTitle = 3;
    string description = 4;
    SourceType source = 5;
    RecordType type = 6;
    RecordSet parent = 7;
    DateRange date = 8;
    string placeId = 9;
    uint32 numRecords = 10;

    repeated ExternalRecordReference externalReference = 20;

}

message RecordSetList {

    repeated RecordSet recordSet = 1;

}

enum SourceType {

    GOVERNMENT_SOURCE = 0;
    CHURCH_SOURCE = 1;

}

enum RecordType {

    BIRTH = 0;
    BAPTISM = 1;

    DEATH = 10;
    BURIAL = 11;
    WILL = 12;
    PROBATE = 13;
    MEMORIAL = 14;

    MENTION = 20;
    MARRIAGE = 21;
    RESIDENCE = 22;
    PAYMENT = 23;
    MEMBERSHIP = 24;

    MIXED = 99;

}

message ExternalRecordReference {

    string reference = 1;
    string archive = 2;
    Link link = 3;

}

message RecordSearch {

    string firstName = 1;
    string lastName = 2;
    uint32 age = 3;

    //Place
    string placeId = 10;

    //Record
    string recordId = 20;

}